# AutoContentor

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  main.yaml  pyproject.toml  requirements.txt
src/: __init__.py
src/auto_contentor/orchestrator/: agent.py  main.py
src/auto_contentor/shared/: __init__.py
src/auto_contentor/shared/clients/: mongo_client.py  redis_client.py
src/auto_contentor/shared/config/: constants.py  settings.py
src/auto_contentor/shared/models/: __init__.py  audience.py  campaign.py  competitor.py  keyword.py  report.py  trend.py
src/auto_contentor/shared/utils/: helpers.py  logger.py  validators.py
src/auto_contentor/sub_agents/aggregator/: __init__.py  agent.py  prompt.py
src/auto_contentor/sub_agents/aggregator/tools/: __init__.py  file_generator.py
src/auto_contentor/sub_agents/audience/: __init__.py  agent.py  prompt.py
src/auto_contentor/sub_agents/audience/tools/: __init__.py  youtube_tool.py
src/auto_contentor/sub_agents/base/: base_agent.py
src/auto_contentor/sub_agents/competitor/: __init__.py  agent.py  prompt.py
src/auto_contentor/sub_agents/keyword/: agent.py  prompts.py
src/auto_contentor/sub_agents/trend/: __init__.py  agent.py  prompt.py
tests/: conftest.py
tests/unit/: test_models.py
